fix logout z-index

--- a/grails-app/assets/stylesheets/application/layout.less
+++ b/grails-app/assets/stylesheets/application/layout.less
@@ -533,7 +533,7 @@ header {
   }
 
   > [ui-view='details'] {
-    z-index: 100;
+    //z-index: 100;
     bottom: 0;
     right: 30px;
     > .panel-light {
